--- a/test4nails/assets/css/main.css
+++ b/test4nails/assets/css/main.css
@@ -224,7 +224,6 @@ button {
   text-transform: uppercase;
   color: #fff;
   background-color: #09ccb4;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   border-radius: 2px;
 }
 
@@ -453,7 +452,6 @@ label .required {
   background-color: #09ccb4;
   color: #fff;
   text-transform: uppercase;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   white-space: nowrap;
   padding: 4px 10px;
   font-weight: 300;
@@ -1156,7 +1154,6 @@ form .select2-container--default .select2-selection--single .select2-selection__
   background-color: #09ccb4;
   white-space: nowrap;
   text-transform: uppercase;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   margin-right: 5%;
   color: white !important;
   text-decoration: none !important;
@@ -1411,7 +1408,6 @@ form .select2-container--default .select2-selection--single .select2-selection__
 }
 
 .cart-btn {
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   width: 100%;
   text-transform: uppercase;
   background-color: #09ccb4;
@@ -1792,7 +1788,6 @@ form .select2-container--default .select2-selection--single .select2-selection__
 h3.modal-header {
   font-size: 23px;
   color: #fff;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   line-height: 1.2;
   padding: 5px 15px;
   background-color: #09ccb4;
@@ -1952,7 +1947,6 @@ span.wpcf7-form-control-wrap.userWishes {
   width: 100%;
   background-color: #09ccb4;
   color: #fff;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   -webkit-transition: 0.15s ease-in-out;
   transition: 0.15s ease-in-out;
   text-transform: uppercase;
@@ -2108,7 +2102,6 @@ html[lang=ru-RU] .tinv-wishlist .tinvwl_added_to_wishlist.tinv-modal button.butt
 .toast-header .close {
   cursor: pointer;
   font-weight: 700;
-  text-shadow: 0 1px 0 #fff;
   font-size: 24px;
   margin-left: 8px;
   margin-right: 12px;
@@ -2279,7 +2272,6 @@ html[lang=ru-RU] .tinv-wishlist .tinvwl_added_to_wishlist.tinv-modal button.butt
   padding: 4px 12px;
   color: #fff;
   background-color: #09ccb4;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   max-width: 272px;
   width: 100%;
   -webkit-transition: 0.3s all;
@@ -2785,7 +2777,6 @@ header {
   padding: 8px 28px;
   font-size: 17px;
   color: #fff;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
 }
@@ -3207,6 +3198,7 @@ embed {
 
 .video__link img {
   width: 100%;
+  height: auto;
 }
 
 .video__info {
@@ -3232,7 +3224,6 @@ embed {
 }
 
 .video__name {
-  text-shadow: 0 0 2px rgb(0, 0, 0);
   font-size: 18px;
   color: #eee;
   white-space: nowrap;
@@ -3335,7 +3326,6 @@ embed {
   text-align: center;
   white-space: nowrap;
   text-transform: uppercase;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
 }
 
 .btn-cyan:hover {
@@ -3589,7 +3579,6 @@ section.about {
   margin-right: 15px;
   margin-bottom: 4px;
   font-size: 17px;
-  text-shadow: 0 1px 0 rgb(2, 2, 6);
 }
 
 .footer__follow {
