--- a/test4nails/assets/css/cart.scss
+++ b/test4nails/assets/css/cart.scss
@@ -15,6 +15,30 @@
 	}
 }
 
+.cart__quantity {
+  position: relative;
+}
+
+.tooltip {
+  display: block!important;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in;
+  width: 300px;
+  top: 40px;
+  padding: 10px;
+  border-radius: 15px;
+  background-color: #000;
+  color: #fff;
+  z-index: 100;
+}
+
+.cart__quantity:hover .tooltip {
+  visibility: visible;
+  opacity: 0.7;
+}
+
 .show-more {
 	display: flex;
 	justify-content: center;
@@ -690,6 +714,9 @@ html[lang=es-ES] .cart__checkout a {
 	.page-template-cart main {
 		padding-bottom: 10%;
 	}
+  .tooltip{
+    right: 0;
+  }
 
 	section.cart .return-to-shop {
 		margin-bottom: 40px;
