adding states and make feature with free delivery items, also fixing problev with correct price in cart in spanish and russian

--- a/test4nails/assets/css/cart.css
+++ b/test4nails/assets/css/cart.css
@@ -229,6 +229,7 @@ section.cart .return-to-shop {
 }
 .cart__product-img img {
   max-width: 80%;
+  height: auto;
 }
 .cart__product-name {
   font-size: 14px;
