--- a/test4nails/assets/css/checkout.css
+++ b/test4nails/assets/css/checkout.css
@@ -209,8 +209,8 @@ fieldset.wc-credit-card-form {
 }
 
 .wc_payment_method__choosen {
-  -webkit-animation: pulse-checkout 4s infinite;
-          animation: pulse-checkout 4s infinite;
+  -webkit-box-shadow: 0px 10px 35px rgb(255, 91, 91);
+          box-shadow: 0px 10px 35px rgb(255, 91, 91);
 }
 
 @-webkit-keyframes pulse-checkout {
@@ -250,8 +250,8 @@ fieldset.wc-credit-card-form {
   100% {
     -webkit-transform: translateZ(50px) translateY(-6px);
     transform: translateZ(50px) translateY(-6px);
-    -webkit-box-shadow: 0 6px 20px -6px rgb(0, 0, 0);
-    box-shadow: 0 6px 20px -6px rgb(0, 0, 0);
+    -webkit-box-shadow: 0 6px 20px -6px rgb(255, 91, 91);
+    box-shadow: 0 6px 20px -6px rgb(255, 91, 91);
   }
 }
 @keyframes shadow-drop-2-bottom-checkout {
@@ -262,8 +262,8 @@ fieldset.wc-credit-card-form {
   100% {
     -webkit-transform: translateZ(50px) translateY(-6px);
     transform: translateZ(50px) translateY(-6px);
-    -webkit-box-shadow: 0 6px 20px -6px rgb(0, 0, 0);
-    box-shadow: 0 6px 20px -6px rgb(0, 0, 0);
+    -webkit-box-shadow: 0 6px 20px -6px rgb(255, 91, 91);
+    box-shadow: 0 6px 20px -6px rgb(255, 91, 91);
   }
 }
 .wc_payment_method .image {
@@ -1164,6 +1164,7 @@ form .selection {
 }
 .checkout-total__img img {
   max-width: 100%;
+  height: auto;
   border: 1px solid #deeae8;
   padding: 5px;
 }
