--- a/test4nails/assets/css/checkout.scss
+++ b/test4nails/assets/css/checkout.scss
@@ -186,7 +186,9 @@ fieldset.wc-credit-card-form {
 }
 
 .wc_payment_method__choosen{
-	animation: pulse-checkout 4s infinite;
+  box-shadow: 0px 10px 35px rgb(255,
+    91,
+    91)
 }
 
 @keyframes pulse-checkout {
@@ -215,8 +217,8 @@ fieldset.wc-credit-card-form {
 	100% {
 		-webkit-transform: translateZ(50px) translateY(-6px);
 		transform: translateZ(50px) translateY(-6px);
-		-webkit-box-shadow: 0 6px 20px -6px rgb(0, 0, 0 / 3);
-		box-shadow: 0 6px 20px -6px rgb(0, 0, 0 / 3);
+		-webkit-box-shadow: 0 6px 20px -6px rgb(255,91,91);
+		box-shadow: 0 6px 20px -6px rgb(255,91,91);
 	}
 }
 
@@ -1123,6 +1125,7 @@ form .selection {
 		
 		img {
 			max-width: 100%;
+      height: auto;
 			border: 1px solid #deeae8;
 			padding: 5px;
 		}
